=== Deluge 1.2.0_rc5 (In Development) ===
==== Web ====
	* Swap order of buttons in Remove window (Closes #1083)

==== GtkUI ====
	* Attempt to register as the default magnet uri handler in GNOME on startup
	* Properly show 100.00% and reduce number of progress bar updates during a torrent creation
	* Fix crash in Windows when creating a torrent
	* Add button to Other preferences to associate magnet links with Deluge

==== Label ====
	* Fix #1085 only use ints for specific options to prevent unhandled exception

=== Deluge 1.2.0_rc4 (24 November 2009) ===
==== Core ====
	* Fix deleting old .fastresume files with fresh configs
	* Fix files list when using magnet uris
	* Fix loading the saved metadata when loading state with magnet uris

==== GtkUI ====
	* Fix showing the 'Other' speed dialogs in Windows
	* Fix adding torrents from the Queued Torrents dialog
	* Fix disabling/enabling plugins after switching daemons
	* Reduce height of Add Torrent Dialog by ~80 pixels
	* Fix #1071 issue where Deluge will fail to start if there is a stale ipc lockfile
	* Fix autoconnecting to the next host in the list if the selected one isn't available
	* Fix endless loop when trying to autoconnect to an offline daemon
	* Fix exception on startup when the system tray icon is not enabled
	* Fix issue where some torrents with special characters could not be added
	* Fix issues adding magnet uris

==== Web ====
	* Fix installing the deluge-web manpage
	* Escape hyphens in the manpage

==== Console ====
	* Escape hyphens in the manpage
	* Make the delete key work
	* Allow ~ to be used in the path in the add command
	* Allow commands that are .pyc files to be used
	* Fix printing info, help, etc.. on the command line

==== Blocklist ====
	* Force blocklist to auto-detect format when a download / import is forced
	* Fix blocklist failing on certain PeerGuardian/SafePeer lists

=== Deluge 1.2.0_rc3 (01 November 2009) ===
==== Core ====